@@ -44,6 +44,11 @@ Version 1.4.7 - CVS
     (#1488590).
   - Don't use trailing delimiter when sqimap_mailbox_create() subscribes
     newly created mailbox.
+  - Undefined variable in src/right_main.php.
+  - Security: Local file inclusion in functions/plugin.php with
+    register_globals enabled, and magic_quotes disabled (reported by Denix
+    Solutions).
+
 
 Version 1.4.6 - 23 February 2006
 --------------------------------
